# NetStress

./: .gitignore  AFXDP_IOURING_IMPLEMENTATION.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  TASK_12_4_COMPLETION_SUMMARY.md  ddos.py  docker-compose.yml  pyoxidizer.bzl  pyproject.toml  requirements.txt  setup.py  test_afxdp_iouring_integration.py  test_gossipsub_basic.py
.github/workflows/: build-release.yml  build-wheels.yml
benchmark_reports/: comprehensive_performance_benchmark_20251222_211455.json  gpu_packet_generation_benchmark_20251222_211455.json  windows_rio_benchmark_20251222_211455.json
benchmarks/: README.md  __init__.py  comprehensive_performance_benchmark.py  gpu_packet_generation_benchmark.py  linux_afxdp_iouring_benchmark.py  macos_network_framework_benchmark.py  windows_rio_benchmark.py
core/: __init__.py  logging_setup.py  native_engine.py
core/ai/: __init__.py  adaptive_strategy.py  advanced_defense_detection.py  ai_orchestrator.py  attack_insights.py  attack_optimizer.py  attack_predictor.py  defense_evasion.py  integration_example.py  ml_infrastructure.py  model_validation.py  reinforcement_learning.py  waf_bypass_agent.py
core/analytics/: __init__.py  data_processor.py  metrics_collector.py  native_stats_bridge.py  performance_tracker.py  predictive_analytics.py  shared_memory_bridge.py  telemetry_stream.py  visualization_engine.py
core/antidetect/: __init__.py  behavioral.py  fingerprint_random.py  proxy_chain.py  traffic_morph.py
core/attacks/: __init__.py  adaptive.py  advanced_protocols.py  advanced_vectors.py  amplification.py  application.py  attack_chains.py  botnet_sim.py  connection.py  effectiveness_monitor.py  intelligent_selector.py  layer4.py  layer7.py  mutation_engine.py  orchestrator.py  payload_generator.py  protocol_fuzzer.py  protocol_specific.py  ssl_attacks.py  steganography.py  timing_attacks.py  vector_selector.py  zero_day_framework.py
core/autonomous/: README.md  __init__.py  adaptation_system.py  enhanced_adaptation.py  optimization_engine.py  performance_predictor.py  resource_manager.py  side_channel_prober.py
core/browser/: __init__.py  browser_emulator.py  captcha_solver.py  cookie_manager.py  dom_stubs.py  fingerprint_spoofer.py  js_engine.py  session_manager.py  turnstile_bypass.py
core/capabilities/: __init__.py  capability_report.py
core/control/: __init__.py  adaptive_rate.py
core/distributed/: __init__.py  agent.py  cert_manager_cli.py  certificates.py  controller.py  coordinator.py  gossipsub_coordinator.py  kademlia_p2p.py  load_balancer.py  protocol.py  pulse_sync.py  stats_aggregator.py  time_sync.py
core/engines/: __init__.py  real_packet_engine.py
core/evasion/: __init__.py  advanced_headers.py  human_behavior.py  ja4_engine.py  protocol_obfuscation.py  timing_patterns.py
core/hardware/: __init__.py  cpu_detector.py  gpu_detector.py  hardware_profile.py  memory_detector.py  network_detector.py
core/health/: __init__.py  self_healing.py
core/integration/: __init__.py  communication_hub.py  component_manager.py  configuration_manager.py  main_integration.py  system_coordinator.py
core/intelligence/: __init__.py  realtime_intelligence.py  traffic_analysis.py
core/interfaces/: __init__.py  api.py  cli.py  dashboard.py  demo.py  mobile.py  tests.py  web_gui.py
core/memory/: __init__.py  gc_optimizer.py  lockfree.py  pool_manager.py
core/monitoring/: __init__.py  real_performance.py  real_resources.py
core/networking/: __init__.py  buffer_manager.py  dns_engine.py  (+8 more)
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  CAPABILITIES.md  CHANGELOG.md  CLI_USAGE.md  CONTRIBUTING.md  CROSS_PLATFORM.md  DOCUMENTATION_INDEX.md  FAQ.md  GUI_README.md  INSTALLATION.md  LAYER4_ATTACKS.md  NATIVE_STATS_INTEGRATION.md  PERFORMANCE_RESULTS.md  PERFORMANCE_TUNING.md  QUICK_REFERENCE.md  QUICK_START.md  SAFETY_SYSTEMS_SUMMARY.md  SECURITY.md  SECURITY_FEATURES.md  STRUCTURE.md  TLS_MUTUAL_AUTH.md  TROUBLESHOOTING.md  USAGE.md
examples/: gossipsub_pulse_demo.py  pulse_interval_demo.py
native/: README.md
native/rust_engine/: Cargo.toml  README.md  RIO_BUFFER_IMPLEMENTATION.md  build.rs  pyproject.toml  wrapper.h  xdp_redirect.bpf.c
native/rust_engine/.cargo/: config.toml
native/rust_engine/proptest-regressions/: adaptive.txt  ja4_spoof.txt  precision_timer.txt  rate_limiter.txt  safety.txt  tls_spoof.txt
native/rust_engine/proptest-regressions/tests/: gossipsub_message_integrity_tests.txt  integration_tests.txt  timer_tests.txt
native/rust_engine/src/: adaptive.rs  atomic_stats.rs  audit.rs  backend.rs  backend_selector.rs  cuda_generator.rs  doh_tunnel.rs  dpdk_pmd.rs  engine.rs  gpu_direct.rs  gpu_memory.rs  http2_fingerprint.rs  ja4_spoof.rs  kademlia.rs  lib.rs  linux_afxdp.rs  linux_afxdp_iouring.rs  linux_fallback.rs  linux_optimizations.rs  linux_xdp_aya.rs  macos_backend.rs  macos_network_framework.rs  p2p_mesh.rs  packet.rs  pool.rs  precision_timer.rs  protocol_builder.rs  queue.rs  quic_http3_engine.rs  rate_limiter.rs  real_morph.rs  rl_agent.rs  safety.rs  shared_memory.rs  simd.rs  stats.rs  test_linux_afxdp_iouring_fallback_property.rs  test_linux_backend_fallback_property.rs  test_linux_xdp_fallback_property.rs  test_macos_backend_fallback.rs  (+9 more)
native/rust_engine/src/tests/: engine_tests.rs  gossipsub_message_integrity_tests.rs  gpu_fallback_property_tests.rs  gpu_packet_generation_tests.rs  integration_tests.rs  mod.rs  timer_tests.rs  tls_tests.rs
scripts/: build.py  build_single_binary.py  build_static_binary.py  clean_system_test.py  install_native.py  optimize_binary_size.py  release.py  verify_power.py  verify_static_deployment.py
tests/: INTEGRATION_TEST_README.md  conftest.py  test_advanced_features.py  test_antidetect.py  test_attacks_advanced.py  test_evasion.py  test_gossipsub_pulse_coordination.py  test_health.py  test_layer4_attacks.py  test_mutation_and_reporting.py  test_native_engine.py  test_new_advanced_features.py  test_orchestration.py  test_pulse_intervals.py  test_recon.py  test_tls_mutual_auth.py  verify_p2p.py
(+123 files in other folders)
