[package]
name = "netstress_engine"
version = "3.0.0"  # Titanium v3.0
edition = "2021"
authors = ["NetStress Team"]
description = "High-performance native packet engine for NetStress Titanium v3.0"
license = "MIT"
readme = "README.md"

[lib]
name = "netstress_engine"
crate-type = ["cdylib"]

[dependencies]
# Core dependencies
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py38"] }
tokio = { version = "1.35", features = ["full"] }
crossbeam = "0.8"
parking_lot = "0.12"
socket2 = "0.5"
libc = "0.2"
rand = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.5"
dashmap = "5.5"
once_cell = "1.19"
sha2 = "0.10"
sha1 = "0.10"  # For Kademlia node ID hashing
md5 = "0.7"  # For JA3 hash calculation
memmap2 = "0.9"  # For shared memory mapping
# Use rustls-tls instead of native-tls for static linking
# rustls is pure Rust and doesn't require OpenSSL
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }  # For DoH HTTPS client
base64 = "0.21"  # For DoH GET parameter encoding
serde = { version = "1.0", features = ["derive"] }  # For Kademlia message serialization
serde_json = "1.0"  # For JSON serialization of Kademlia messages
hex = "0.4"  # For hex encoding/decoding of node IDs
num_cpus = "1.16"  # For CPU core detection in adaptive scaling

# =============================================================================
# TITANIUM v3.0 DEPENDENCIES
# =============================================================================
# These dependencies enable the advanced features of NetStress Titanium:
# - True kernel bypass (AF_XDP, RIO, Network.framework)
# - GPU acceleration (CUDA)
# - P2P mesh networking (libp2p)
# - Reinforcement learning (tch-rs/ONNX)

# P2P Mesh Network with Kademlia DHT and GossipSub
# **Validates: Requirements 8.1** - libp2p for peer discovery and command propagation
libp2p = { version = "0.53", optional = true, features = [
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "identify",
    "ping",
    "tokio",
    "macros"
] }

# Reinforcement Learning with ONNX models
# **Validates: Requirements 7.3** - tch-rs for running pre-trained ONNX models
tch = { version = "0.14", optional = true }

# QUIC/HTTP/3 Support
# **Validates: Requirements 5.3, 5.4, 5.5** - QUIC protocol implementation
quinn = { version = "0.10", optional = true }
rustls = { version = "0.21", optional = true }
webpki-roots = { version = "0.25", optional = true }
h3 = { version = "0.0.4", optional = true }
h3-quinn = { version = "0.0.5", optional = true }

# =============================================================================
# LINUX-SPECIFIC DEPENDENCIES
# =============================================================================
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.6", optional = true }
nix = "0.27"

# Linux eBPF/XDP via aya crate
# **Validates: Requirements 3.1** - True AF_XDP kernel bypass
aya = { version = "0.12", optional = true }
aya-log = { version = "0.2", optional = true }

# DPDK PMD static linking support
# **Validates: Requirements 10.2** - Statically link DPDK PMDs
dpdk-sys = { version = "0.1", optional = true }
bindgen = { version = "0.69", optional = true }

# =============================================================================
# WINDOWS-SPECIFIC DEPENDENCIES
# =============================================================================
[target.'cfg(target_os = "windows")'.dependencies]
# Legacy winapi for backward compatibility
winapi = { version = "0.3", features = ["winsock2", "ws2tcpip", "ioapiset", "minwinbase", "handleapi", "processthreadsapi", "winbase", "errhandlingapi", "sysinfoapi", "winnt"] }

# Modern windows-sys for full RIO implementation
# **Validates: Requirements 3.1** - Full Registered I/O implementation
windows-sys = { version = "0.52", optional = true, features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation"
] }

# =============================================================================
# MACOS-SPECIFIC DEPENDENCIES
# =============================================================================
[target.'cfg(target_os = "macos")'.dependencies]
# macOS Network.framework bindings via objc2
# **Validates: Requirements 4.1** - Native Network.framework integration
objc2 = { version = "0.4", optional = true }
objc2-foundation = { version = "0.2", optional = true }
block2 = { version = "0.4", optional = true }

# =============================================================================
# GPU ACCELERATION DEPENDENCIES
# =============================================================================
# CUDA runtime bindings for GPU packet generation
# **Validates: Requirements 5.1** - GPU acceleration with CUDA
cudarc = { version = "0.11", optional = true }
rustacuda = { version = "0.1", optional = true }  # Alternative CUDA bindings

[build-dependencies]
cc = "1.0"

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
criterion = "0.5"

# =============================================================================
# RELEASE PROFILE - OPTIMIZED FOR SINGLE BINARY DEPLOYMENT
# =============================================================================
# **Validates: Requirements 10.1** - Static linking and binary size optimization

[profile.release]
# Maximum optimization level for performance
opt-level = 3

# Enable Link-Time Optimization for smaller binary and better performance
# This allows cross-crate optimizations
lto = "fat"

# Use single codegen unit for maximum optimization
# This increases compile time but reduces binary size
codegen-units = 1

# Abort on panic instead of unwinding
# This reduces binary size by removing unwinding code
panic = "abort"

# Strip debug symbols from the binary
# This significantly reduces binary size
strip = "symbols"

# Enable overflow checks even in release mode for safety
overflow-checks = true

# =============================================================================
# STATIC LINKING CONFIGURATION
# =============================================================================
# **Validates: Requirements 10.1** - Static compilation with target-feature=+crt-static

[target.x86_64-pc-windows-msvc]
rustflags = [
    "-C", "target-feature=+crt-static",
    "-C", "link-arg=/NODEFAULTLIB:msvcrt",
    "-C", "link-arg=/NODEFAULTLIB:vcruntime",
    "-C", "link-arg=/DEFAULTLIB:libcmt",
]

[target.x86_64-unknown-linux-gnu]
rustflags = [
    "-C", "target-feature=+crt-static",
    "-C", "link-arg=-static-libgcc",
]

[target.x86_64-unknown-linux-musl]
rustflags = [
    "-C", "target-feature=+crt-static",
    "-C", "link-arg=-static",
]

[target.x86_64-apple-darwin]
rustflags = [
    "-C", "target-feature=+crt-static",
]

[target.aarch64-apple-darwin]
rustflags = [
    "-C", "target-feature=+crt-static",
]

# =============================================================================
# SIZE-OPTIMIZED PROFILE (OPTIONAL)
# =============================================================================
# Use this profile if binary size is more important than performance:
# cargo build --profile release-size

[profile.release-size]
inherits = "release"
opt-level = "z"  # Optimize for size instead of speed
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

# =============================================================================
# FEATURE FLAGS
# =============================================================================
# Titanium v3.0 introduces new feature flags for advanced capabilities

[features]
default = ["sendmmsg"]

# Linux backend features
dpdk = ["dep:dpdk-sys", "dep:bindgen"]
af_xdp = ["dep:aya", "dep:aya-log"]  # True AF_XDP via aya crate
io_uring = ["dep:io-uring"]
sendmmsg = []

# Windows backend features
iocp = []
registered_io = ["dep:windows-sys"]  # Full RIO via windows-sys

# macOS backend features
kqueue = []
network_framework = ["dep:objc2", "dep:objc2-foundation", "dep:block2"]  # Network.framework via objc2

# GPU acceleration features
cuda = ["dep:cudarc", "cudarc/cuda-12000"]
gpu_acceleration = ["cuda"]

# P2P mesh networking
p2p_mesh = ["dep:libp2p"]

# Reinforcement learning
rl_agent = ["dep:tch"]

# QUIC/HTTP/3 support
quic = ["dep:quinn", "dep:rustls", "dep:webpki-roots"]
http3 = ["quic", "dep:h3", "dep:h3-quinn"]

# Platform-optimized feature bundles
linux_optimized = ["sendmmsg", "io_uring", "af_xdp"]
windows_optimized = ["iocp", "registered_io"]
macos_optimized = ["kqueue", "network_framework"]

# Titanium full feature set (all advanced features)
titanium = [
    "af_xdp",
    "registered_io", 
    "network_framework",
    "cuda",
    "p2p_mesh",
    "rl_agent",
    "http3"
]
